--- a/app/src/main/res/layout/fragment_calendar_.xml
+++ b/app/src/main/res/layout/fragment_calendar_.xml
@@ -9,25 +9,26 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="62dp"
+        android:layout_height="70dp"
         android:layout_marginTop="60dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/month"
-            android:layout_width="102dp"
+            android:layout_width="48dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:paddingLeft="10dp"
             android:text="05"
             android:textColor="#0FA075"
-            android:textSize="60sp"
-            android:textStyle="bold" />
+            android:textSize="50sp"
+            android:textStyle="bold"
+            android:layout_marginLeft="15dp"/>
 
         <TextView
             android:id="@+id/year"
-            android:layout_width="84dp"
+            android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center|left"
@@ -39,10 +40,10 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="20dp"
+            android:layout_width="2dp"
             android:layout_height="20dp"
-            android:layout_marginLeft="200dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginLeft="50dp"
             android:layout_weight="1"
             tools:src="@drawable/calendar_achievement" />
 
@@ -134,6 +135,7 @@
             android:background="@drawable/calendar_one_line" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/calendarRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="341dp" />
 
@@ -142,6 +144,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:orientation="vertical">
 
         <ImageView
