--- a/app/src/main/res/layout/todo_item.xml
+++ b/app/src/main/res/layout/todo_item.xml
@@ -10,12 +10,23 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="15dp"
             android:orientation="horizontal">
+
+            <androidx.appcompat.widget.AppCompatCheckBox
+                android:id="@+id/checkbox"
+                android:layout_width="25dp"
+                android:layout_height="20dp"
+                android:layout_marginRight="10dp"
+                android:buttonTint="#FFFFFF"
+                android:checked="false">
+
+            </androidx.appcompat.widget.AppCompatCheckBox>
 
             <TextView
                 android:id="@+id/item_title"
@@ -38,7 +49,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
+            android:layout_marginLeft="45dp"
             android:layout_marginTop="15dp">
 
             <TextView
