--- a/app/src/main/res/layout/fragment_calendar_.xml
+++ b/app/src/main/res/layout/fragment_calendar_.xml
@@ -19,12 +19,12 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:paddingLeft="10dp"
+            android:paddingLeft="20dp"
             android:text="05"
             android:textColor="#0FA075"
             android:textSize="50sp"
             android:textStyle="bold"
-            android:layout_marginLeft="15dp"/>
+            android:layout_marginLeft="3dp"/>
 
         <TextView
             android:id="@+id/year"
@@ -45,7 +45,7 @@
             android:layout_height="18dp"
             android:layout_weight="1"
             android:layout_marginTop="40dp"
-            android:layout_marginLeft="80dp"
+            android:layout_marginLeft="90dp"
             android:src="@drawable/calendar_achievement" />
 
         <TextView
@@ -53,22 +53,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_marginRight="-10dp"
             android:text="성취율" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="318dp"
-        android:layout_height="318dp"
+        android:layout_width="370dp"
+        android:layout_height="370dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
         android:background="@drawable/calendar_border"
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="321dp"
+            android:layout_width="340dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="17dp"
             android:orientation="horizontal">
 
             <TextView
@@ -77,7 +78,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Mon" />
+                android:text="Mon"
+                android:textSize="17sp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/textView9"
@@ -85,7 +88,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Tue" />
+                android:text="Tue"
+                android:textSize="17sp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/textView10"
@@ -93,7 +98,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Wed" />
+                android:text="Wed"
+                android:textSize="17sp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/textView11"
@@ -101,7 +108,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Thu" />
+                android:text="Thu"
+                android:textSize="17sp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/textView12"
@@ -109,7 +118,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Fri" />
+                android:text="Fri"
+                android:textSize="17sp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/textView13"
@@ -117,7 +128,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Sat" />
+                android:text="Sat"
+                android:textSize="17sp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/textView14"
@@ -125,42 +138,45 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Sun" />
+                android:text="Sun"
+                android:textSize="17sp"
+                android:textStyle="bold"/>
         </LinearLayout>
 
         <ImageView
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
+            android:layout_width="330dp"
+            android:layout_height="3dp"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
             android:background="@drawable/calendar_one_line" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/calendarRecyclerView"
-            android:layout_width="318dp"
-            android:layout_height="310dp"
-            android:layout_gravity="center" />
+            android:layout_width="340dp"
+            android:layout_height="340dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"/>
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="318dp"
+        android:layout_width="348dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/plusMemo"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginLeft="220dp"
+            android:layout_marginLeft="260dp"
             android:background="@drawable/plus_btn_large" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="220dp"
+            android:layout_marginLeft="260dp"
             android:layout_marginTop="8dp"
             android:text="메모 추가"
             android:textSize="20sp"
