--- a/app/src/main/res/layout/fragment_routine_edit_dialog.xml
+++ b/app/src/main/res/layout/fragment_routine_edit_dialog.xml
@@ -97,7 +97,7 @@
             android:textAlignment="center"
             android:textColor="#232323"/>
 
-        <EditText
+        <TextView
             android:id="@+id/rtn_time_edit"
             android:layout_width="200dp"
             android:layout_height="40dp"
