--- a/app/src/main/res/layout/fragment_todo_edit_dialog.xml
+++ b/app/src/main/res/layout/fragment_todo_edit_dialog.xml
@@ -67,7 +67,7 @@
             android:textColor="#232323"
             android:textStyle="bold" />
 
-        <EditText
+        <TextView
             android:id="@+id/todo_time_edit"
             android:layout_width="200dp"
             android:layout_height="40dp"
