--- a/app/src/main/res/layout/routine_add_dialog.xml
+++ b/app/src/main/res/layout/routine_add_dialog.xml
@@ -76,7 +76,7 @@
             android:textColor="#232323"
             android:textStyle="bold" />
 
-        <EditText
+        <TextView
             android:id="@+id/rtn_day"
             android:layout_width="200dp"
             android:layout_height="40dp"
@@ -102,7 +102,7 @@
             android:textColor="#232323"
             android:textStyle="bold" />
 
-        <EditText
+        <TextView
             android:id="@+id/rtn_time"
             android:layout_width="200dp"
             android:layout_height="40dp"
