--- a/app/src/main/res/layout/todo_add_dialog.xml
+++ b/app/src/main/res/layout/todo_add_dialog.xml
@@ -78,7 +78,7 @@
             android:textAlignment="center"
             android:textColor="#232323"/>
 
-        <EditText
+        <TextView
             android:id="@+id/todo_time"
             android:layout_width="200dp"
             android:layout_height="40dp"
