--- a/app/src/main/res/layout/fragment_routine_edit_dialog.xml
+++ b/app/src/main/res/layout/fragment_routine_edit_dialog.xml
@@ -59,25 +59,134 @@
 
         <TextView
             android:id="@+id/day"
-            android:layout_width="55dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="0dp"
             android:text="요일"
             android:textColor="#232323"
-            android:textAlignment="center"
             android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/rtn_day_edit"
+        <LinearLayout
             android:layout_width="200dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="30dp"
+            android:layout_height="45dp"
+            android:orientation="vertical"
+            android:layout_marginLeft="60dp"
             android:layout_gravity="center"
-            android:background="@drawable/edittext_blank"
-            />
+            android:background="@drawable/edittext_blank">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <CheckBox
+                    android:id="@+id/checkM"
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginRight="6dp"
+                    android:button="@null"
+                    android:background="@drawable/custom_date_checkbox"/>
+                <CheckBox
+                    android:id="@+id/checkTu"
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
+                    android:layout_marginRight="6dp"
+                    android:button="@null"
+                    android:background="@drawable/custom_date_checkbox"/>
+                <CheckBox
+                    android:id="@+id/checkW"
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
+                    android:layout_marginRight="6dp"
+                    android:button="@null"
+                    android:background="@drawable/custom_date_checkbox"/>
+                <CheckBox
+                    android:id="@+id/checkTh"
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
+                    android:layout_marginRight="6dp"
+                    android:button="@null"
+                    android:background="@drawable/custom_date_checkbox"/>
+                <CheckBox
+                    android:id="@+id/checkF"
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
+                    android:layout_marginRight="6dp"
+                    android:button="@null"
+                    android:background="@drawable/custom_date_checkbox"/>
+                <CheckBox
+                    android:id="@+id/checkSa"
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
+                    android:layout_marginRight="6dp"
+                    android:button="@null"
+                    android:background="@drawable/custom_date_checkbox"/>
+                <CheckBox
+                    android:id="@+id/checkSu"
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
+                    android:layout_marginRight="64dp"
+                    android:button="@null"
+                    android:background="@drawable/custom_date_checkbox"/>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="15dp"
+                    android:textStyle="bold"
+                    android:text="월"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="15dp"
+                    android:textStyle="bold"
+                    android:text="화"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="15dp"
+                    android:textStyle="bold"
+                    android:text="수"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="15dp"
+                    android:textStyle="bold"
+                    android:text="목"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="15dp"
+                    android:textStyle="bold"
+                    android:text="금"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="15dp"
+                    android:textStyle="bold"
+                    android:text="토"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:text="일"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
